test/compile_errors/err_recovery_missing_fn_body.w
//! expect-error: expected

fn greet(name: str):

fn helper() -> i32:
    42

fn main:
    print("ok")
